src/tests/keep_parsing_2.qd
// TEST: compilation_should_fail 'Попытка деления на ноль'

void _start() of
	word a;
	word b;
	0 = a;           // error
	b = a + 1;
	word c = a / 0;  // error
end
